# teg

./: .gitignore  compile_commands.json  desing  license  meson.build  meson.options  readme.md
benchmark/: meson.build
benchmark/include/benchmark/: benchmark.h  data.h  data_structures.h  ram_monitor.h
benchmark/src/benchmark_cista/: cista.h  meson.build
benchmark/src/benchmark_flatbuffers/: benchmark_flatbuffers.cc  meson.build
benchmark/src/benchmark_protobuf/: benchmark_protobuf.cc  meson.build  test_data.pb.cc  test_data.pb.h  test_data_conversions.h
benchmark/src/benchmark_teg/: benchmark_teg.cc  meson.build
benchmark/src/benchmark_zppbits/: benchmark_zppbits.cc  meson.build  zpp_bits.h
benchmark/src/gbm_teg/: gbm_teg.cc  meson.build
benchmarking/: meson.build  readme.md
benchmarking/include/benchmarking/: benchmarking.h  data.h  memory_profiling.h  old_test_obj3d.h  ram_monitor.h  test_ecommerce.h  test_obj3d.h
benchmarking/src/benchmark_cista/: benchmark_cista.cc  meson.build
benchmarking/src/benchmark_flatbuffers/: meson.build
benchmarking/src/benchmark_protobuf/: meson.build  test_data.proto
benchmarking/src/benchmark_zppbits/: benchmark_zppbits.cc  meson.build
benchmarking/src/gbm_teg/: meson.build
benchmarking/src/test_ecommerce/benchmark_boost/: ecommerce_boost.cc  meson.build
benchmarking/src/test_ecommerce/benchmark_flatbuf/: ecommerce.fbs  ecommerce_flatbuf.cc  ecommerce_generated.h  meson.build
benchmarking/src/test_ecommerce/benchmark_msgpack/: ecommerce_msgpack.cc  meson.build
benchmarking/src/test_ecommerce/benchmark_protobuf/: ecommerce.pb.cc  ecommerce.pb.h  ecommerce.proto  ecommerce_protobuf.cc  meson.build
benchmarking/src/test_ecommerce/benchmark_teg/: ecommerce_teg.cc  meson.build
benchmarking/src/test_ecommerce/benchmark_teg_compact/: ecommerce_teg_compact.cc  meson.build
benchmarking/src/test_ecommerce/benchmark_teg_native/: ecommerce_teg_native.cc  meson.build
benchmarking/src/test_ecommerce/benchmark_zppbits/: ecommerce_zppbits.cc  meson.build
benchmarking/src/test_obj3d/benchmark_boost/: meson.build  obj3d_boost.cc
benchmarking/src/test_obj3d/benchmark_flatbuf/: meson.build  obj3d.fbs  obj3d_flatbuf.cc  obj3d_generated.h
benchmarking/src/test_obj3d/benchmark_msgpack/: meson.build  obj3d_msgpack.cc
benchmarking/src/test_obj3d/benchmark_protobuf/: meson.build  obj3d.pb.cc  obj3d.pb.h  obj3d.proto  obj3d_protobuf.cc
benchmarking/src/test_obj3d/benchmark_teg/: meson.build  obj3d_teg.cc
benchmarking/src/test_obj3d/benchmark_teg_compact/: meson.build  obj3d_teg_compact.cc
benchmarking/src/test_obj3d/benchmark_teg_native/: meson.build  obj3d_teg_native.cc
benchmarking/src/test_obj3d/benchmark_zppbits/: meson.build  obj3d_zppbits.cc  zpp_bits.h
include/larrad/: buffer.h  concepts.h  deserialization.h  error.h  member_count.h  serialization.h  visitor.h
include/teg/: alignment.h  base_concepts.h  buffer.h  c_array.h  compatible.h  concepts.h  constexpr_compat.h  container.h  container_concepts.h  core_concepts.h  declval.h  decoder.h  def.h  deserialization.h  encoder.h  endian.h  error.h  fixed_string.h  hash.h  index_table.h  md5.h  member_count.h  member_type_visitor.h  members_count.h  members_equal.h  members_get.h  members_tie.h  members_visitor.h  mod_reflecton.h  mod_serialization.h  mod_varint.h  options.h  schema.h  (+12 more)
misc/: gen_members_visitor.py
scripts/: eh.py  generate_headers.py  generate_members_tie_h.py  generate_members_visitor_h.py  output.csv  parse_obj3d.py  teapot.c
src/: reflection.ixx  serialization.ixx  teg.ixx  varint.ixx  xxhash.c
tests/: meson.build  readme.md
tests/include/: test.h  test_fixture.h  test_macros.h
tests/include/test/: test.h  test_fixture.h  test_macros.h
tests/src/ex_comptime_serialization/: ex_comptime_serialization.cc  meson.build
tests/src/test_aggregates/: meson.build  test_aggregates.cc
tests/src/test_alignment/: meson.build  test_alignment.cc
tests/src/test_allocation/: meson.build  test_allocation.cc
tests/src/test_buffer/: meson.build  test_buffer.cc
tests/src/test_c_array/: meson.build  test_c_array.cc
tests/src/test_carray/: meson.build  test_carray.cc
tests/src/test_compatible/: meson.build  test_compatible.cc
tests/src/test_comptime_serialization/: meson.build  test_comptime_serialization.cc  wtf.cc
tests/src/test_concepts/: meson.build  test_concepts.cc
tests/src/test_container/: meson.build  test_container.cc
tests/src/test_deserialization/: test_deserialization.cc
tests/src/test_endianness/: meson.build  test_endianness.cc
tests/src/test_fixed_string/: meson.build  test_fixed_string.cc
tests/src/test_fundamental/: meson.build  test_fundamental.cc
tests/src/test_map/: meson.build  test_map.cc
tests/src/test_md5/: meson.build  test_md5.cc
tests/src/test_modules/: meson.build  test_mod_reflection.cc  test_mod_serialization.cc  test_mod_varint.cc
tests/src/test_optional/: meson.build  test_optional.cc
tests/src/test_overload_resolution/: meson.build  test_overload_resolution.cc
tests/src/test_owning_pointer/: meson.build  test_owning_pointer.cc
tests/src/test_owning_ptr/: meson.build  test_owning_ptr.cc
tests/src/test_reflection/: meson.build  test_reflection.cc
tests/src/test_schema/: meson.build  test_schema.cc
tests/src/test_serialization/: meson.build  test_serialization.cc
tests/src/test_serialize/: test_serialize.cc
tests/src/test_set/: meson.build  test_set.cc
tests/src/test_stream/: meson.build  test_stream.cc
tests/src/test_string/: meson.build  test_string.cc
tests/src/test_tuple/: meson.build  test_tuple.cc
tests/src/test_type_code/: meson.build  test_type_code.cc
tests/src/test_user_serialization/: meson.build  test_user_serialization.cc
tests/src/test_variant/: meson.build  test_variant.cc
tests/src/test_varint/: meson.build  test_varint.cc
tests/src/test_vector/: meson.build  test_vector.cc
tests/test_deserialization/: meson.build  test_deserialization.cc
tests/test_serialization/: meson.build
tests/test_serialize/: meson.build  test_serialize.cc
(+5 files in other folders)
