option(
  'max_visit_members', 
  type : 'integer', 
  min : 0, 
  max : 4294967295, # 2^32 - 1
  value : 255       # default value
)
option(
  'enable_tests',
  type : 'boolean',
  value : false,
  description : 'Enables tests.'
)
option(
  'enable_benchmarking',
  type : 'boolean',
  value : false,
  description : 'Enables benchmarking.'
)
