test_inc = include_directories('include')
test_dep = declare_dependency(
  link_args : [],
  compile_args : [],
  include_directories : test_inc
)

subdir('src/test_concepts')
subdir('src/test_reflection')
subdir('src/test_overload_resolution')
subdir('src/test_buffer')
subdir('src/test_fundamental')
subdir('src/test_carray')
subdir('src/test_optional')
subdir('src/test_container')
subdir('src/test_vector')
subdir('src/test_string')
subdir('src/test_fixed_string')
subdir('src/test_set')
subdir('src/test_map')
subdir('src/test_owning_pointer')
subdir('src/test_variant')