test_mod_reflection = executable(
  'test_mod_reflection', 
  'test_mod_reflection.cc',
  dependencies: [tegmod_dep]
)

test_mod_varint = executable(
  'test_mod_varint', 
  'test_mod_varint.cc',
  dependencies: [tegmod_dep]
)

test_mod_serialization = executable(
  'test_mod_serialization', 
  'test_mod_serialization.cc',
  dependencies: [tegmod_dep]
)

test('mod_reflection', test_mod_reflection)
test('mod_varint', test_mod_varint)
test('mod_serialization', test_mod_serialization)